--- a/.ceiba-metodo/metodo-ceiba/workflows/desarrollo/estimar-historia-usuario/workflow.yaml
+++ b/.ceiba-metodo/metodo-ceiba/workflows/desarrollo/estimar-historia-usuario/workflow.yaml
@@ -23,6 +23,7 @@ variables:
   story_number: "prompt" # Número de la historia a estimar
   dev_story_location: "{config_source}:dev_story_location" # Directory where stories are stored
   incident_location: "{config_source}:incident_location" # Directory where incidents are stored
+  dod_pivots_location: "{config_source}:dod_pivots_location" # Optional DoD pivots table
 
 # Output configuration - enriches existing story file
 default_output_file: "{dev_story_location}/{story_number}.story.md"
