--- a/.ceiba-metodo/core/workflows/brainstorming/workflow.yaml
+++ b/.ceiba-metodo/core/workflows/brainstorming/workflow.yaml
@@ -9,11 +9,6 @@ output_folder: "{config_source}:output_folder"
 user_name: "{config_source}:user_name"
 date: system-generated
 
-# Optional inputs for guided brainstorming
-recommended_inputs:
-  - session_context: "Context document passed via data attribute"
-  - previous_results: "{output_folder}/brainstorming-*.md"
-
 # Context can be provided via data attribute when invoking
 # Example: data="{path}/context.md" provides domain-specific guidance
 
@@ -33,11 +28,11 @@ web_bundle:
   name: "brainstorming"
   description: "Facilitate interactive brainstorming sessions using diverse creative techniques. This workflow facilitates interactive brainstorming sessions using diverse creative techniques. The session is highly interactive, with the AI acting as a facilitator to guide the user through various ideation methods to generate and refine creative solutions."
   author: "BMad"
-  template: "ceiba-metodo/core/workflows/brainstorming/template.md"
-  instructions: "ceiba-metodo/core/workflows/brainstorming/instructions.md"
-  brain_techniques: "ceiba-metodo/core/workflows/brainstorming/brain-methods.csv"
+  template: ".ceiba-metodo/core/workflows/brainstorming/template.md"
+  instructions: ".ceiba-metodo/core/workflows/brainstorming/instructions.md"
+  brain_techniques: ".ceiba-metodo/core/workflows/brainstorming/brain-methods.csv"
   use_advanced_elicitation: true
   web_bundle_files:
-    - "ceiba-metodo/core/workflows/brainstorming/instructions.md"
-    - "ceiba-metodo/core/workflows/brainstorming/brain-methods.csv"
-    - "ceiba-metodo/core/workflows/brainstorming/template.md"
+    - ".ceiba-metodo/core/workflows/brainstorming/instructions.md"
+    - ".ceiba-metodo/core/workflows/brainstorming/brain-methods.csv"
+    - ".ceiba-metodo/core/workflows/brainstorming/template.md"
