--- a/.ceiba-metodo/metodo-ceiba/workflows/desarrollo/estimar-historia-usuario/workflow.yaml
+++ b/.ceiba-metodo/metodo-ceiba/workflows/desarrollo/estimar-historia-usuario/workflow.yaml
@@ -23,7 +23,25 @@ variables:
   story_number: "prompt" # Número de la historia a estimar
   dev_story_location: "{config_source}:dev_story_location" # Directory where stories are stored
   incident_location: "{config_source}:incident_location" # Directory where incidents are stored
-  dod_pivots_location: "{config_source}:dod_pivots_location" # Optional DoD pivots table
+  dod_pivots_location: "{config_source}:dod_pivots_location" # DoD pivots table (REQUIRED)
+  architecture_sharded_location: "{config_source}:architecture_sharded_location" # Architecture docs location
+
+# ============================================================================
+# ARCHIVOS DE CONFIGURACIÓN REQUERIDOS (BLOQUEANTE)
+# ============================================================================
+required_project_files:
+  - name: "dod-pivots.md"
+    path: "{dod_pivots_location}"
+    description: "Tabla de pivotes DoD y técnicos - Define tiempos para tareas manuales y técnicas"
+    severity: "BLOCKING"
+    generator_workflow: "*administrar-pivotes-dod"
+    impact: "Sin este archivo, la estimación de tareas manuales usará valores genéricos poco precisos"
+  - name: "coding-standards.md"
+    path: "{architecture_sharded_location}/coding-standards.md"
+    description: "Estándares de código del proyecto"
+    severity: "WARNING"
+    generator_workflow: "*generar-estandares-codigo"
+    impact: "Recomendado para validar que las tareas sigan estándares del equipo"
 
 # Output configuration - enriches existing story file
 default_output_file: "{dev_story_location}/{story_number}.story.md"
