refactor: se actualiza verision del metodo

--- a/.ceiba-metodo/metodo-ceiba/workflows/desarrollo/revisar-historia/workflow.yaml
+++ b/.ceiba-metodo/metodo-ceiba/workflows/desarrollo/revisar-historia/workflow.yaml
@@ -130,6 +130,9 @@ diagnostic_tasks:
       task_file: "diagnostic-backend.xml"
     - id: "frontend"
       task_file: "diagnostic-frontend.xml"
+    - id: "finops-greenops"
+      task_file: "diagnostic-finops-greenops.xml"
+      description: "Identifica oportunidades críticas de optimización de costos cloud y sostenibilidad"  
     - id: "unit-tests"
       task_file: "diagnostic-unit-tests.xml"
     - id: "integration-tests"
